添加星火大模型生成建议

--- a/monitor.html
+++ b/monitor.html
@@ -177,6 +177,7 @@
 
   <script src="js/api.js"></script>
   <script src="js/models.js"></script>
+  <script src="js/ai-advisor.js"></script>
   <script src="js/monitor.js"></script>
 </body>
 </html>
