--- a/user-detail.html
+++ b/user-detail.html
@@ -12,6 +12,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <script src="js/api.js"></script>
   <script src="js/models.js"></script>
+  <script src="js/ai-advisor.js"></script>
   <script src="js/excel-report.js"></script>
 </head>
 <body>
