减少了不必要的代码

--- a/admin.html
+++ b/admin.html
@@ -4,16 +4,12 @@
   <meta charset="UTF-8">
   <title>管理员主页面</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords" content="管理,系统">
-  <meta name="description" content="管理,系统">
-  <link rel="stylesheet" href="https://www.mobanwang.com/style/css/demo.css">
+
   <link rel="stylesheet" href="https://www.mobanwang.com/style/css/font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://www.mobanwang.com/style/css/bootstrap/5.1.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/admin.css">
-  <style>
 
-  </style>
   <script src="https://www.mobanwang.com/style/css/bootstrap/5.1.1/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
@@ -69,6 +65,7 @@
                 <select id="modalRole" class="form-select mb-2" style="width:220px;">
                   <option value="admin">管理员</option>
                   <option value="monitor">监控人员</option>
+                  <option value="driver">驾驶员</option>
                 </select>
                 <input id="modalPhone" class="form-control mb-2" placeholder="手机号" style="width:220px;" />
                 <div id="modalMsg" style="color:#d32f2f;height:20px;"></div>
@@ -91,6 +88,7 @@
                 <select id="editModalRole" class="form-select mb-2" style="width:220px;">
                   <option value="admin">管理员</option>
                   <option value="monitor">监控人员</option>
+                  <option value="driver">驾驶员</option>
                 </select>
                 <input id="editModalPhone" class="form-control mb-2" placeholder="手机号" style="width:220px;" />
                 <div id="editModalMsg" style="color:#d32f2f;height:20px;"></div>
