--- a/login.html
+++ b/login.html
@@ -5,10 +5,10 @@
     <title>疲劳检测系统后台 - 登录</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
-    <meta name="keywords" content="疲劳检测系统, 登录, 后台管理, 驾驶员, 监控, 管理员" />
+
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/login.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" media="all">
+    <link rel="stylesheet" href="https://www.mobanwang.com/style/css/font-awesome-4.7.0/css/font-awesome.min.css">
     <style>
         /* 美化角色选择框 */
         select#role {
@@ -56,6 +56,7 @@
                                 <option value="" disabled selected>请选择角色</option>
                                 <option value="admin">管理员</option>
                                 <option value="monitor">监控人员</option>
+                                <option value="driver">驾驶员</option>
                             </select>
                             <div id="msg" class="msg"
                                 style="color:#e74c3c;margin:8px 0;min-height:22px;"></div>
