--- a/monitor.html
+++ b/monitor.html
@@ -5,15 +5,13 @@
   <title>监控人员主页面</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
-  <link href="css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://www.mobanwang.com/style/css/font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/monitor.css">
   <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.3/dist/echarts.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <link rel="stylesheet" href="https://www.mobanwang.com/style/css/bootstrap/5.1.1/css/bootstrap.min.css">
   <script src="https://www.mobanwang.com/style/css/bootstrap/5.1.1/js/bootstrap.bundle.min.js"></script>
-  <style>
 
-  </style>
 </head>
 <body>
   <header class="monitor-header">
