--- a/user-detail.html
+++ b/user-detail.html
@@ -5,7 +5,7 @@
   <title>用户详情</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
-  <link href="css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://www.mobanwang.com/style/css/font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://www.mobanwang.com/style/css/bootstrap/5.1.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/user-detail.css">
   <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.3/dist/echarts.min.js"></script>
