添加统一的提示弹框,toast

--- a/monitor.html
+++ b/monitor.html
@@ -21,10 +21,10 @@
   <div class="monitor-content">
     <ul class="nav nav-tabs mb-3" id="monitorTabNav">
       <li class="nav-item">
-        <a class="nav-link active" id="tab-dashboard" href="#" onclick="showMonitorTab('dashboard')">统计总览</a>
+        <a class="nav-link active" id="tab-dashboard" href="#">统计总览</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="tab-user-monitor" href="#" onclick="showMonitorTab('user-monitor')">用户监控</a>
+        <a class="nav-link" id="tab-user-monitor" href="#">用户监控</a>
       </li>
     </ul>
     <div id="monitor-dashboard">
@@ -173,6 +173,7 @@
     </tr>
   </template>
 
+  <script src="js/toast.js"></script>
   <script src="js/api.js"></script>
   <script src="js/models.js"></script>
   <script src="js/ai-advisor.js"></script>
