--- a/admin.html
+++ b/admin.html
@@ -15,13 +15,13 @@
 <body>
   <header class="admin-header d-flex align-items-center justify-content-between">
     <div class="logo"><i class="fa fa-cogs"></i> 管理员后台</div>
-    <button class="btn btn-danger logout-btn" onclick="logout()">注销</button>
+    <button class="btn btn-danger logout-btn" id="logoutBtn">注销</button>
   </header>
   <div class="d-flex">
     <nav class="admin-sidebar d-flex flex-column">
-      <a class="nav-link active" id="menu-users" href="#" onclick="showPanel('users')"><i class="fa fa-users"></i> 管理用户</a>
-      <a class="nav-link" id="menu-online" href="#" onclick="showPanel('online')"><i class="fa fa-user-circle"></i> 在线用户</a>
-      <a class="nav-link" id="menu-logs" href="#" onclick="showPanel('logs')"><i class="fa fa-list-alt"></i> 系统日志和状态</a>
+      <a class="nav-link active" id="menu-users" href="#"><i class="fa fa-users"></i> 管理用户</a>
+      <a class="nav-link" id="menu-online" href="#"><i class="fa fa-user-circle"></i> 在线用户</a>
+      <a class="nav-link" id="menu-logs" href="#"><i class="fa fa-list-alt"></i> 系统日志和状态</a>
     </nav>
     <main class="admin-content flex-fill">
       <div id="panel-users">
@@ -40,7 +40,7 @@
               <option value="role">角色排序</option>
             </select>
             <button class="btn btn-sm btn-primary" id="userSearchBtn" style="width:60px;margin-top:unset">搜索</button>
-            <button class="btn btn-sm btn-success" onclick="openAddUserModal()" style="margin-top:unset;width: 100px;margin-left: 10px;">
+            <button class="btn btn-sm btn-success" id="openAddUserBtn" style="margin-top:unset;width: 100px;margin-left: 10px;">
               <i class="fa fa-plus"></i> 添加用户
             </button>
           </div>
@@ -60,7 +60,7 @@
         <div id="addUserModal" class="modal" tabindex="-1">
           <div class="modal-dialog">
             <div class="modal-content">
-              <div class="modal-header"><h5 class="modal-title">添加用户</h5><button type="button" class="btn-close" onclick="closeAddUserModal()"></button></div>
+              <div class="modal-header"><h5 class="modal-title">添加用户</h5><button type="button" class="btn-close" id="closeAddUserModalBtn"></button></div>
               <div class="modal-body d-flex flex-column align-items-center">
                 <input id="modalUser" class="form-control mb-2" placeholder="用户名" style="width:220px;" />
                 <input id="modalPwd" type="password" class="form-control mb-2" placeholder="密码" style="width:220px;" />
@@ -77,7 +77,7 @@
               </div>
               <div class="modal-footer">
                 <button id="addUserBtn" class="btn btn-primary" style="width:80px;">添加</button>
-                <button type="button" class="btn btn-secondary" onclick="closeAddUserModal()" style="width:80px;">取消</button>
+                <button type="button" class="btn btn-secondary" id="cancelAddUserBtn" style="width:80px;">取消</button>
               </div>
             </div>
           </div>
@@ -86,7 +86,7 @@
         <div id="editUserModal" class="modal" tabindex="-1">
           <div class="modal-dialog">
             <div class="modal-content">
-              <div class="modal-header"><h5 class="modal-title">编辑用户</h5><button type="button" class="btn-close" onclick="closeEditUserModal()"></button></div>
+              <div class="modal-header"><h5 class="modal-title">编辑用户</h5><button type="button" class="btn-close" id="closeEditUserModalBtn"></button></div>
               <div class="modal-body d-flex flex-column align-items-center">
                 <input id="editModalUser" class="form-control mb-2" placeholder="用户名" style="width:220px;" />
                 <input id="editModalPwd" type="password" class="form-control mb-2" placeholder="密码(留空不修改)" style="width:220px;" />
@@ -99,7 +99,7 @@
               </div>
               <div class="modal-footer">
                 <button id="editUserBtn" class="btn btn-primary" style="width:80px;">保存</button>
-                <button type="button" class="btn btn-secondary" onclick="closeEditUserModal()" style="width:80px;">取消</button>
+                <button type="button" class="btn btn-secondary" id="cancelEditUserBtn" style="width:80px;">取消</button>
               </div>
             </div>
           </div>
@@ -170,13 +170,13 @@
         <!-- 日志操作控件 -->
         <div class="d-flex mb-3 align-items-center justify-content-between" style="gap:12px;">
           <div class="d-flex align-items-center" style="gap:12px;">
-            <button class="btn btn-sm btn-primary"style="width:100px" onclick="refreshLogsFromBackend()">
+            <button class="btn btn-sm btn-primary" style="width:100px" id="refreshLogsBtn">
               <i class="fa fa-refresh"></i> 刷新
             </button>
-            <button class="btn btn-sm btn-success"style="width:100px" onclick="exportLogsToLocal()">
+            <button class="btn btn-sm btn-success" style="width:100px" id="exportLogsBtn">
               <i class="fa fa-download"></i> 导出日志
             </button>
-            <button class="btn btn-sm btn-danger"style="width:100px" onclick="deleteLocalLogs()">
+            <button class="btn btn-sm btn-danger" style="width:100px" id="deleteLogsBtn">
               <i class="fa fa-trash"></i> 删除日志
             </button>
           </div>
@@ -217,7 +217,7 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger" onclick="confirmDeleteLocalLogs()">
+          <button type="button" class="btn btn-danger" id="confirmDeleteLogsBtn">
             <i class="fa fa-trash" ></i> 删除本地日志
           </button>
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
@@ -256,6 +256,9 @@
       <div class="actions">
         <button class="btn btn-info btn-sm action-btn-edit">
           <i class="fa fa-edit me-1"></i>编辑
+        </button>
+        <button class="btn btn-warning btn-sm action-btn-toggle">
+          <i class="fa fa-ban me-1"></i>禁用
         </button>
         <button class="btn btn-danger btn-sm action-btn-delete">
           <i class="fa fa-trash me-1"></i>删除
@@ -300,6 +303,7 @@
     </div>
   </template>
 
+  <script src="js/toast.js"></script>
   <script src="js/api.js"></script>
   <script src="js/models.js"></script>
   <script src="js/admin.js"></script>
