--- a/login.html
+++ b/login.html
@@ -71,6 +71,7 @@
             </div>
         </div>
     </section>
+    <script src="js/toast.js"></script>
     <script src="js/api.js"></script>
     <script src="js/models.js"></script>
     <script src="js/login.js"></script>
