--- a/user-detail.html
+++ b/user-detail.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/user-detail.css">
   <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.3/dist/echarts.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+  <script src="js/toast.js"></script>
   <script src="js/api.js"></script>
   <script src="js/models.js"></script>
   <script src="js/ai-advisor.js"></script>
