用户监控次要排序功能

--- a/monitor.html
+++ b/monitor.html
@@ -76,10 +76,8 @@
           <span>次要排序</span>
           <select id="userMonitorSecondarySort" class="form-select d-inline-block" style="width:120px;">
             <option value="none">无</option>
-            <option value="status">在线状态</option>
-            <option value="username">用户名</option>
-            <option value="fatigueCount">疲劳次数</option>
-            <option value="fatigueDuration">疲劳时长</option>
+            <option value="online">在线状态</option>
+            <option value="offline">离线状态</option>
           </select>
         </span>
         <span class="ms-3">每页显示
